# yolohands

./: .gitignore  README.md  datasetpro.py  fullprocess.py  model_train.py  model_tune.py  model_tune_ray.py  pyproject.toml  stream.py  stream_deploy.py  train.yaml
runs/detect/train10/: args.yaml  results.csv
runs/detect/train11/: args.yaml  results.csv
runs/detect/train12/: args.yaml
runs/detect/train13/: args.yaml  results.csv
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml
runs/detect/train5/: args.yaml
runs/detect/train6/: args.yaml
runs/detect/train7/: args.yaml  results.csv
runs/detect/train8/: args.yaml  results.csv
runs/detect/train9/: args.yaml  results.csv
runs/detect/tune/: best_hyperparameters.yaml  tune_results.csv
runs/detect/tune2/: best_hyperparameters.yaml  tune_results.csv
runs/detect/tune3/: best_hyperparameters.yaml  tune_results.csv
